[package]
name = "cranelift-module"
version = "0.86.0"
authors = ["The Cranelift Project Developers"]
description = "Support for linking functions and data with Cranelift"
repository = "https://github.com/bytecodealliance/wasmtime"
documentation = "https://docs.rs/cranelift-module"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2021"

[dependencies]
cranelift-codegen = { path = "../codegen", version = "0.86.0", default-features = false }
hashbrown = { version = "0.11", optional = true }
anyhow = "1.0"

[features]
default = ["std"]
std = ["cranelift-codegen/std"]
restricted-std = ["hashbrown", "cranelift-codegen/restricted-std"]

[badges]
maintenance = { status = "experimental" }
