[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift"
version = "0.86.0"
description = "Umbrella for commonly-used cranelift crates"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cranelift"
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
keywords = ["compile", "compiler", "jit"]
edition = "2021"

[dependencies]
cranelift-codegen = { path = "../codegen", version = "0.86.0", default-features = false }
cranelift-frontend = { path = "../frontend", version = "0.86.0", default-features = false }

[features]
default = ["std"]
std = ["cranelift-codegen/std", "cranelift-frontend/std"]
restricted-std = ["cranelift-codegen/restricted-std", "cranelift-frontend/restricted-std"]

[badges]
maintenance = { status = "experimental" }
